# klyne

./: .gitignore  CLAUDE.md  DEPLOYMENT_SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml  klyne.code-workspace  nginx.conf
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  publish-sdk.yml
app/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  dev.sh  entrypoint.sh  fix_admin_column.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  vite.config.js
app/alembic/: env.py
app/alembic/versions/: 25612c4a60e2_add_free_plan_support.py  30628adc7197_add_apikey_model.py  5dd523af1f8d_add_user_model_for_authentication.py  8d864487834a_remove_preprocessed_aggregates_use_raw_.py  9a1573a14fb8_merge_migration_heads.py  9bd01edd5933_add_emails_table_for_email_tracking.py  a23e245e430c_add_user_identifiers_to_analytics_events.py  b19962794c53_add_analytics_tables.py  c9f6e8a2b5d1_add_badge_tokens_table.py  e19160229bb6_add_subscription_fields_to_user_model.py  e2420669e7ad_remove_geographic_fields_from_analytics.py  e24ae68f6704_add_is_active_description_badge_public_.py  f0815de6fe96_add_is_admin_column_to_users.py
app/docs/: ANALYTICS_API.md
app/src/: main.py
app/src/api/: analytics.py  backoffice.py  badge.py  dashboard.py
app/src/commands/: __init__.py  cleanup_free_plan_data.py  management.py  send_welcome_emails.py  sync_polar_packages.py
app/src/core/: api_auth.py  assets.py  auth.py  config.py  database.py  dependencies.py  rate_limiter.py  scheduler.py  service_dependencies.py  static.py  subscription_utils.py  templates.py
app/src/js/: dashboard.js  main.js  theme-switcher.js
app/src/models/: __init__.py  analytics_aggregates.py  analytics_event.py  api_key.py  badge.py  badge_token.py  email.py  email_signup.py  user.py
app/src/repositories/: analytics_event_repository.py  api_key_repository.py  badge_repository.py  badge_token_repository.py  base.py  email_repository.py  email_signup_repository.py  unit_of_work.py  user_repository.py
app/src/schemas/: analytics.py  api_key.py  badge.py  checkout.py  dashboard.py  email.py  user.py
app/src/scripts/: README.md  __init__.py  send_apology_emails.py
app/src/services/: analytics_service.py  api_key_service.py  auth_service.py  badge_service.py  email.py  polar.py  subscription_service.py  user_service.py
app/src/static/: robots.txt  sitemap.xml
app/src/static/css/: components.css  input.css  output.css  style.css
app/src/templates/: analytics-dashboard.html  base.html  checkout_confirmation.html  dashboard.html  docs.html  index.html  login.html  pricing.html  register.html  registration_success.html  resend_verification.html  resend_verification_already_verified.html  resend_verification_success.html  settings.html  success.html  verification_error.html  verification_success.html
app/src/templates/backoffice/: api-keys.html  dashboard.html  events.html  layout.html  users.html
app/src/templates/components/: card.html  dashboard_nav.html  form.html  header.html  list.html
app/src/templates/emails/: welcome.html
app/src/utils/: jinja_debug.py
app/tests/: conftest.py  test_aggregation.py  test_analytics_api.py  test_analytics_models.py  test_analytics_simple.py  test_api_keys.py  test_auth.py  test_auth_utils.py  test_cleanup.py  test_email_service.py  test_models.py  test_package_limits.py  test_python_version_grouping.py
deployment/: .terraform.lock.hcl  README.md  backend.hcl  cloud-init.yml  deploy.sh  docker-compose.prod.yml  health-check.sh  main.tf  rollback.sh  secrets.example.env  setup-secrets.sh  terraform.tfvars.example
scripts/: release.sh
sdk/: CLICK_ADAPTER.md  README.md  example.py  example_click_cli.py  pyproject.toml  test_click_adapter.py  test_integration.py  test_multiple_clients.py
sdk/klyne/: __init__.py  click_adapter.py  client.py  collector.py  installation.py  version.py
