[project]
name = "klyne-app"
version = "0.1.0"
description = "Klyne - Package Analytics Landing Page"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "python-multipart>=0.0.17",
    "jinja2>=3.1.4",
    "email-validator>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "passlib>=1.7.4",
    "starlette>=0.47.2",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "resend>=2.11.0",
    "python-dotenv>=1.1.1",
    "bcrypt>=4.1.0,<5.0.0",
    "polar-sdk>=0.22.6",
    "apscheduler>=3.10.4",
    "logfire[asyncpg,fastapi,sqlalchemy]>=4.3.6",
    "opentelemetry-instrumentation-asyncpg>=0.57b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
    "sentry-sdk[fastapi]>=2.42.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ty]
# Type checking configuration
rules.invalid-argument-type = "ignore"  # SQLAlchemy columns often show as Unknown
rules.invalid-return-type = "ignore"    # SQLAlchemy relationships have complex types
rules.unsupported-operator = "ignore"   # Dict operations with SQLAlchemy objects
rules.unresolved-attribute = "ignore"   # Dynamic attributes in test fixtures
rules.possibly-missing-attribute = "ignore"  # SQLAlchemy and test fixture attributes
rules.invalid-assignment = "ignore"  # Type mismatches with third-party libraries
rules.unresolved-import = "ignore"  # Relative imports and dynamic imports
rules.deprecated = "ignore"  # Deprecated warnings for datetime and pydantic

